k8s/mysqlservice.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: mysqlservice
  labels:
    app: mysqlservice
spec:
  selector:
    matchLabels:
      app: mysqlservice
      tier: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysqlservice
        tier: mysql
    spec:
      containers:
      - image: mysql:8.0
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
