k8s/stockservice-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stockserviceui-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: stockserviceui
  template:
    metadata:
      labels:
        component: stockserviceui
    spec:
      containers:
      - image: sachinmudigere/stocksapp-stockui-service
        name: stockserviceui
        ports:
        - containerPort: 8080
