k8s/configservice-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: configservice-ip-service
spec:
  type: ClusterIP
  selector:
    component: configservice
  ports:
    - port: 8888
      targetPort: 8888
