k8s/discoveryservice-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: discoveryservice-ip-service
spec:
  type: ClusterIP
  selector:
    component: discoveryservice
  ports:
    - port: 8761
      targetPort: 8761
