k8s/mongodbs.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb-standalone
spec:
  serviceName: database
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
        selector: mongodb-standalone
    spec:
      containers:
      - name: mongodb-standalone
        image: mongo:4.0.8
        volumeMounts:
          - name: mongodb-data
            mountPath: /data/db
      nodeSelector:
        kubernetes.io/hostname: docker-desktop  
      volumes:
      - name: mongodb-data
        persistentVolumeClaim:
          claimName: mongodb-standalone-pvc      

---
apiVersion: v1
kind: Service
metadata:
  name: database
  labels:
    app: database
spec:
  clusterIP: None
  selector:
    app: database
