k8s/mongos.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
spec:
  selector:
    app: mongo
  ports:
    - port: 27017
      targetPort: 27017
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
spec:
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo
          image: mongo:4.4.7
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: storage
              mountPath: /run/desktop/mnt/host/c/Sachin/MongoKube/data
          resources:
            requests:
              cpu: "100m" 
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"   
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: mongo-pvc
