k8s/mysqlservice-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysqlservice-ip-service
spec:
  type: ClusterIP
  selector:
      app: mysqlservice
      tier: mysql
  ports:
    - port: 3306
      targetPort: 3306
