k8s/stockservice-ui-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stockserviceui-ip-service
spec:
  type: ClusterIP
  selector:
    component: stockserviceui
  ports:
    - port: 8080
      targetPort: 8080
