k8s/userservice-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: userservice-ip-service
spec:
  type: ClusterIP
  selector:
    component: userservice
  ports:
    - port: 8085
      targetPort: 8085
